crates/review-buddy/tests/snapshots/diff__binary_file_shows_the_fallback.snap
---
source: crates/review-buddy/tests/diff.rs
expression: shown
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
 GH liminal-hq/review-buddy#214 · liminal-hq · Add a menu bar and keyboard-driven menus
╭ files 2 ───────────────────────╮╭ assets/logo.png ───────────────────────────────────────────────╮
│› · assets/logo.png        +1 −0││                                                                │
│  · src/a.rs               +1 −0││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                         assets/logo.png                        │
│                                ││           binary or very large · o to open in browser          │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│ Your review · pending ─────────││                                                                │
│Nothing pending yet.            ││                                                                │
│0 of 2 files viewed             ││                                                                │
│Your review: not started        ││                                                                │
│a approve · c comment           ││                                                                │
│x request changes · R review    ││                                                                │
╰────────────────────────────────╯╰ file 1 of 2 ───────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  R submit a review  o open  y copy
