crates/review-buddy/tests/snapshots/diff__diff_loading_100x30.snap
---
source: crates/review-buddy/tests/diff.rs
expression: shown
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
╭ files ─────────────────────────╮╭ diff ──────────────────────────────────────────────────────────╮
│                                ││                                                                │
│             ·  ·  ·            ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                        Loading the diff…                       │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│ Your review · pending ─────────││                                                                │
│·  ·  ·                         ││                                                                │
│Your review: not started        ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  R submit a review  o open  y copy
