crates/review-buddy/tests/snapshots/diff__large_file_renders_only_a_window.snap
---
source: crates/review-buddy/tests/diff.rs
expression: shown
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ files 1 ───────────────────────╮╭ src/big.rs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│› · src/big.rs             +1 −0││  1393 1393   let value_1393 = 1393;                                                                                        │
│                                ││  1394 1394   let value_1394 = 1394;                                                                                        │
│                                ││  1395 1395   let value_1395 = 1395;                                                                                        │
│                                ││  1396 1396   let value_1396 = 1396;                                                                                        │
│                                ││  1397 1397   let value_1397 = 1397;                                                                                        │
│                                ││  1398 1398   let value_1398 = 1398;                                                                                        │
│                                ││  1399 1399   let value_1399 = 1399;                                                                                        │
│                                ││  1400      - let old_1400 = 1400;                                                                                          │
│                                ││       1400 + let new_1400 = 1400;                                                                                          │
│                                ││  1401 1401   let value_1401 = 1401;                                                                                        │
│                                ││  1402 1402   let value_1402 = 1402;                                                                                        │
│                                ││  1403 1403   let value_1403 = 1403;                                                                                        │
│                                ││  1404 1404   let value_1404 = 1404;                                                                                        │
│                                ││  1405 1405   let value_1405 = 1405;                                                                                        │
│                                ││  1406 1406   let value_1406 = 1406;                                                                                        │
│                                ││  1407 1407   let value_1407 = 1407;                                                                                        │
│                                ││  1408 1408   let value_1408 = 1408;                                                                                        │
│                                ││  1409 1409   let value_1409 = 1409;                                                                                        │
│                                ││  1410 1410   let value_1410 = 1410;                                                                                        │
│                                ││  1411 1411   let value_1411 = 1411;                                                                                        │
│                                ││  1412 1412   let value_1412 = 1412;                                                                                        │
│                                ││  1413 1413   let value_1413 = 1413;                                                                                        │
│                                ││  1414 1414   let value_1414 = 1414;                                                                                        │
│                                ││  1415 1415   let value_1415 = 1415;                                                                                        │
│                                ││  1416 1416   let value_1416 = 1416;                                                                                        │
│                                ││  1417 1417   let value_1417 = 1417;                                                                                        │
│                                ││  1418 1418   let value_1418 = 1418;                                                                                        │
│                                ││  1419 1419   let value_1419 = 1419;                                                                                        │
│                                ││  1420 1420   let value_1420 = 1420;                                                                                        │
│                                ││  1421 1421   let value_1421 = 1421;                                                                                        │
│ Your review · pending ─────────││  1422 1422   let value_1422 = 1422;                                                                                        │
│Nothing pending yet.            ││  1423 1423   let value_1423 = 1423;                                                                                        │
│0 of 1 file viewed              ││  1424 1424   let value_1424 = 1424;                                                                                        │
│Your verdict: not started       ││  1425 1425   let value_1425 = 1425;                                                                                        │
│a approve · c comment           ││  1426 1426   let value_1426 = 1426;                                                                                        │
│x request changes               ││› 1427 1427   let value_1427 = 1427;                                                                                        │
╰────────────────────────────────╯╰ hunk 1 of 1 · file 1 of 1 ─────────────────────────────────────────────────────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  o open  y copy  esc back  ? help  T theme
